Upgraded to Vertx 5 and RMB v36.0.0-snapshot